--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="header">Header</div>
+    <div id="profile-container">
+        <img id="profile-image" src="fotoo.jpeg" alt="foto">
+        <h2 id="profile-n ame">Nur Aisyah Wulandari</h2>
+    </div>
 </body>
 </html>
