added new div as footer container with id = footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="profile-container">
+    <img id="profile-image" src="fotoo.jpeg" alt="foto">
+    <h2 id="profile-name">Nur Aisyah Wulandari</h2>
+    </div>
     
+    <div id="footer">Footer</div>
 </body>
 </html>
