--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="profile-container">
     <img id="profile-image" src="fotoo.jpeg" alt="foto">
     <h2 id="profile-name">Nur Aisyah Wulandari</h2>
     </div>
-    
+
     <div id="footer">Footer</div>
 </body>
 </html>
